--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "trello",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "linter": "eslint .",
@@ -13,5 +13,8 @@
   "license": "ISC",
   "devDependencies": {
     "eslint": "^8.14.0"
+  },
+  "dependencies": {
+    "dotenv": "^16.0.0"
   }
 }
