--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "eslint": "^8.14.0"
   },
   "dependencies": {
-    "dotenv": "^16.0.0"
+    "dotenv": "^16.0.0",
+    "trello": "^0.11.0"
   }
 }
